Fixing z-index on hamb menu

--- a/src/components/HambMenu/hambmenu.css
+++ b/src/components/HambMenu/hambmenu.css
@@ -1,4 +1,5 @@
 .content-hamb-menu {
+    z-index: 5;
     cursor: pointer;
     color: white;
     position: absolute;
